mejoras agregar y eliminar productos

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,19 +1,63 @@
 body {
-    background-color: rgb(207, 231, 250);
+    background-color: #87CEEB;
+    margin: 0;
 }
+
+.productos {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
 .producto {
     border: 1px solid #ccc;
     padding: 10px;
-    margin: 10px;
     text-align: center;
 }
+
 .promo {
     font-size: larger;
     font-weight: bold;
     color: #ff0000;
 }
+.productosCarrito {
+    display: flex;
+    flex-wrap: wrap;
+    width: 25%;
+    gap: .2rem;
+}
 
 #carrito {
     margin-top: 20px;
     font-weight: bold;
+}
+.Cart {
+    margin: 20px auto;
+    width: 25%; 
+    text-align: center;
+}
+.copyright{
+    text-align: end;
+    margin-right: 2.5rem;
+}
+@media (max-width: 768px) {
+    .productos {
+        grid-template-columns: repeat(2, minmax(0, 1fr)); /* Muestra 2 productos por fila en tablet */
+    }
+    .Cart {
+        width: 50%;
+    }
+}
+@media (max-width: 480px) {
+    .productos {
+        grid-template-columns: repeat(1, minmax(0, 1fr)); /* Muestra 1 producto por fila en mobile */
+    }
+    .Cart {
+        width: 80%
+    }
+    .copyright{
+        text-align: center;
+        margin: 0;
+    }
 }
