--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,24 @@ body {
     margin: 0;
 }
 
+.headerTop {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.carritoCompras {
+    width: 40px;
+    display: flex;
+    margin-right: 2.5rem;
+}
+
+.carritoComprasContainer {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+
 .productos {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -21,6 +39,7 @@ body {
     font-weight: bold;
     color: #ff0000;
 }
+
 .productosCarrito {
     display: flex;
     flex-wrap: wrap;
@@ -32,31 +51,40 @@ body {
     margin-top: 20px;
     font-weight: bold;
 }
+
 .Cart {
     margin: 20px auto;
-    width: 25%; 
+    width: 25%;
     text-align: center;
 }
-.copyright{
+
+.copyright {
     text-align: end;
     margin-right: 2.5rem;
 }
+
 @media (max-width: 768px) {
     .productos {
-        grid-template-columns: repeat(2, minmax(0, 1fr)); /* Muestra 2 productos por fila en tablet */
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        /* Muestra 2 productos por fila en tablet */
     }
+
     .Cart {
         width: 50%;
     }
 }
+
 @media (max-width: 480px) {
     .productos {
-        grid-template-columns: repeat(1, minmax(0, 1fr)); /* Muestra 1 producto por fila en mobile */
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        /* Muestra 1 producto por fila en mobile */
     }
+
     .Cart {
         width: 80%
     }
-    .copyright{
+
+    .copyright {
         text-align: center;
         margin: 0;
     }
