--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Titillium+Web:wght@400;600;700&display=swap");
+
+* {
+    box-sizing: border-box;
+    font-family: "Titillium Web", sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
 body {
     background-color: #f9f9f9;
     margin: 0;
 }
 
-.headerTop {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+ul {
+    list-style-type: none;
 }
-
-.carritoCompras {
-    width: 40px;
-    display: flex;
-    margin-right: 2.5rem;
-}
-
-.carritoComprasContainer {
-    display: flex;
-    flex-direction: row-reverse;
-}
-
 
 .productos {
     display: grid;
@@ -34,58 +31,133 @@ body {
     text-align: center;
 }
 
+.producto img {
+    width: 250px;
+    object-fit: contain;
+    height: 300px;
+}
+
 .promo {
     font-size: larger;
     font-weight: bold;
     color: #ff0000;
 }
 
-.productosCarrito {
+.container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    background-color: #39669d;
+}
+
+aside {
+    padding: 2rem;
+    position: sticky;
+    top: 0;
+    height: 100vh;
     display: flex;
-    flex-wrap: wrap;
-    width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #fff;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.boton-menu {
+    background-color: transparent;
+    border: 0;
+    color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
+    display: flex;
+    gap: 1rem;
+    font-weight: 600;
+}
+
+.boton-menu.active {
+    background-color: #f9f9f9;
+    border-radius: .5rem;
+    color: #39669d;
+    padding: .2rem .5rem;
+}
+
+main {
+    background-color: #f9f9f9;
+    margin: 1rem;
+    margin-left: 0;
+    border-radius: 1rem;
+    padding: 3rem;
+}
+
+.titulo-principal {
+    color: #39669d;
+    margin-bottom: 2rem;
+}
+
+.productos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+}
+
+.boton-carrito {
+    margin: 2rem 0 0 .5rem;
+}
+
+.carrito-vacio {
+    color: #39669d;
+    font-weight: 600;
+    display: none;
+}
+.carrito-productos {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: ;
+}
+.carrito-producto {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #aec0d63b;
+    padding: .5rem .7rem;
+    border-radius: .7rem;
+}
+.CarritoImg {
+    width: 4rem;
+    border-radius: .4rem;
+}
+.carrito-producto-eliminar {
+   border: 0;
+   background-color: transparent;
+   margin-right: 1.5rem;
+   cursor: pointer;
+}
+.carrito-producto-eliminar:hover {
+   border-radius: .2rem;
+   background-color: #39669d;
+   margin-right: 1.5rem;
+   cursor: pointer;
+   color: #fff;
+}
+.gestion-carrito {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1.5rem;    
+}
+.gestion-carrito-vaciar {
+    cursor: pointer;
+}
+.gestion-carrito-derecha {
+    display: flex;
+    margin-right: 2rem;
+    height: 2.5rem;
+    align-items: center;
     gap: .7rem;
 }
-
-#carrito {
-    margin-top: 20px;
-    font-weight: bold;
-}
-
-.Cart {
-    margin: 20px auto;
-    width: 25%;
-    text-align: center;
-}
-
-.copyright {
-    text-align: end;
-    margin-right: 2.5rem;
-}
-
-@media (max-width: 768px) {
-    .productos {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        /* Muestra 2 productos por fila en tablet */
-    }
-
-    .Cart {
-        width: 50%;
-    }
-}
-
-@media (max-width: 480px) {
-    .productos {
-        grid-template-columns: repeat(1, minmax(0, 1fr));
-        /* Muestra 1 producto por fila en mobile */
-    }
-
-    .Cart {
-        width: 80%
-    }
-
-    .copyright {
-        text-align: center;
-        margin: 0;
-    }
+.gestion-carrito-total {
+    display: flex;
 }
