--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,29 +18,23 @@ ul {
     list-style-type: none;
 }
 
-.productos {
+.products {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 20px;
     padding: 20px;
 }
 
-.producto {
+.product {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
 }
 
-.producto img {
+.product img {
     width: 250px;
     object-fit: contain;
     height: 300px;
-}
-
-.promo {
-    font-size: larger;
-    font-weight: bold;
-    color: #ff0000;
 }
 
 .container {
@@ -66,7 +60,7 @@ aside {
     gap: 1rem;
 }
 
-.boton-menu {
+.menu-button {
     background-color: transparent;
     border: 0;
     color: #fff;
@@ -77,7 +71,7 @@ aside {
     font-weight: 600;
 }
 
-.boton-menu.active {
+.menu-button.active {
     background-color: #f9f9f9;
     border-radius: .5rem;
     color: #39669d;
@@ -90,35 +84,37 @@ main {
     margin-left: 0;
     border-radius: 1rem;
     padding: 3rem;
+    box-sizing: border-box;
 }
 
-.titulo-principal {
+.main-title {
     color: #39669d;
     margin-bottom: 2rem;
 }
 
-.productos {
+.products {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
 }
 
-.boton-carrito {
+.button-cart {
     margin: 2rem 0 0 .5rem;
 }
 
-.carrito-vacio {
+.empty-cart {
     color: #39669d;
     font-weight: 600;
     display: none;
 }
-.carrito-productos {
+
+.products-cart {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: ;
 }
-.carrito-producto {
+
+.product-cart {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -126,38 +122,63 @@ main {
     padding: .5rem .7rem;
     border-radius: .7rem;
 }
-.CarritoImg {
+
+.product-cart-imagen {
     width: 4rem;
     border-radius: .4rem;
 }
-.carrito-producto-eliminar {
-   border: 0;
-   background-color: transparent;
-   margin-right: 1.5rem;
-   cursor: pointer;
-}
-.carrito-producto-eliminar:hover {
-   border-radius: .2rem;
-   background-color: #39669d;
-   margin-right: 1.5rem;
-   cursor: pointer;
-   color: #fff;
-}
-.gestion-carrito {
+
+
+.handle-cart {
     display: flex;
     justify-content: space-between;
-    margin-top: 1.5rem;    
+    margin-top: 1.5rem;
 }
-.gestion-carrito-vaciar {
+
+.handle-cart-delete {
     cursor: pointer;
 }
-.gestion-carrito-derecha {
+
+.handle-cart-derecha {
     display: flex;
     margin-right: 2rem;
     height: 2.5rem;
     align-items: center;
     gap: .7rem;
 }
-.gestion-carrito-total {
+
+.handle-cart-total {
     display: flex;
+}
+
+.wrapper {
+    width: 100%;
+    max-width: 1024px;
+    padding-top: 20px;
+    text-align: center;
+}
+
+h2 {
+    font-family: sans-serif;
+    color: #fff;
+}
+
+.carousel {
+    width: 90%;
+    max-width: 80vw;
+    margin: 0px auto;
+}
+
+.slick-slide {
+    margin: 10px;
+}
+
+.slick-slide img {
+    width: 100%;
+    border: 2px solid #fff;
+}
+
+.wrapper .slick-dots li button:before {
+    font-size: 20px;
+    color: white;
 }
