--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,13 +105,16 @@ main {
 .empty-cart {
     color: #39669d;
     font-weight: 600;
-    display: none;
 }
 
 .products-cart {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.disabled {
+    display: none;
 }
 
 .product-cart {
